Bug 216152 - PC beeper of conexant chip is not recognised anymore
Summary: PC beeper of conexant chip is not recognised anymore
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: Intel Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-20 08:55 UTC by Ingo D. Rullhusen
Modified: 2022-06-20 10:42 UTC (History)
1 user (show)

See Also:
Kernel Version: 5.15.46 4.19.246
Subsystem:
Regression: No
Bisected commit-id:


Attachments
suggested patch for this bug (538 bytes, patch)
2022-06-20 08:55 UTC, Ingo D. Rullhusen
Details | Diff

Description Ingo D. Rullhusen 2022-06-20 08:55:08 UTC
Created attachment 301227 [details]
suggested patch for this bug

The PC beeper of my ASUS notebook P2520L (Intel HDA / conexant) do not work anymore with recent kernel versions. This problem seems to exist since 4.19 or so. The PC beep functionality is recognised by autoprobing but not initialized.

This steps seems to be swapped (see suggested patch).

The appended patch was tested with 5.15.46 and 4.19.246.
Comment 1 Takashi Iwai 2022-06-20 10:24:43 UTC
Weird, it's not clear how this call order change really matters.

Could you give alsa-info.sh output, with and without your patch?  Run the script with --no-upload option and attach to Bugzilla.
Comment 2 Takashi Iwai 2022-06-20 10:31:38 UTC
Grr, scratch my comment, now I see that the missing piece is the beep_nid setup in the generic parser.  Then swapping the call makes sense.

I see a similar issue in VIA codec driver, too.  Will cook up the proper patch(es).
Comment 3 Takashi Iwai 2022-06-20 10:42:48 UTC
Now in the upstream:
https://lore.kernel.org/r/20220620104008.1994-1-tiwai@suse.de

Note You need to log in before you can comment on or make changes to this bug.